# DynamicText2Speech

./: README.md
IndonesiaSoundBank/: README.MD
Test/: CMakeLists.txt  Kata.txt
depedency/HTS_Engine/lib/: HTS_Engine.lib
depedency/Sinsy/lib/: Sinsy.lib
src/: GenerateVoice.cpp  JapanRomaji.h  Parser.cpp  main.cpp
